--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -433,11 +433,16 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
 .div--user {
   padding-top: 20px; }
 
+.show--info {
+  float: right;
+  background: none; }
+
 .stream--info {
   text-align: right;
   padding: 15px 10px 5px 10px;
   background-color: #FF4136;
-  margin: -20px 10px 10px 10px; }
+  margin: -20px 10px 10px 10px;
+  display: none; }
 
 .span--info {
   color: lightgray; }
