Revert "Added a toggle for more info button"
This reverts commit 570ab63528580bebf2e89bc70d60d4b5dee4bf4e.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -433,16 +433,11 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
 .div--user {
   padding-top: 20px; }
 
-.show--info {
-  float: right;
-  background: none; }
-
 .stream--info {
   text-align: right;
   padding: 15px 10px 5px 10px;
   background-color: #FF4136;
-  margin: -20px 10px 10px 10px;
-  display: none; }
+  margin: -20px 10px 10px 10px; }
 
 .span--info {
   color: lightgray; }
