--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,4 @@
 @import 'normalize';
-@import 'https://fonts.googleapis.com/css?family=Open+Sans';
 $orange: #FF851B;
 $red: #FF4136;
 $navy: #001f3f;
@@ -12,7 +11,7 @@ $olive: #3D9970;
 
 html, body{
   background-color: $navy;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
   text-align: center;
@@ -24,7 +23,7 @@ select, input, button{
 
 .main--container{
   display: table;
-  margin: 50px auto;
+  margin: 10px auto;
   background-color: $orange;
   padding: 10px 20px;
 }
@@ -51,6 +50,10 @@ select, input, button{
   font-size: 20px;
   background-color: $navy;
 }
+
+.div--user{
+  padding-top: 20px;
+}
   
 .ul--streamers{
   list-style-type: none;
@@ -59,6 +62,11 @@ select, input, button{
   margin: 30px auto;
 }
   
+.li--hidden,
+.div--hidden {
+  display: none;
+}
+
 .li--streamers{
   position: relative;
   background-color: $olive;
@@ -68,8 +76,11 @@ select, input, button{
   text-align: left;
   z-index: 5;
 }
- 
-a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:active{
+
+.a--streamers,
+.a--streamers:hover, 
+.a--streamers:focus, 
+.a--streamers:active {
   display: inline-block;
   color: $navy;
   text-decoration: none;
@@ -79,11 +90,12 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
   border: 2px solid $navy;
   padding: 0px 4px;
 }
-  
-.div--user{
-  padding-top: 20px;
+
+.fa-angle-down{
+  float: right;
 }
   
+//Created by JS
 .stream--info{
   text-align: right;
   padding: 15px 10px 5px 10px;
@@ -93,7 +105,9 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
   
 .span--info{
   color: lightgray;
+  margin: 20px 0px;
 }
+////////////////
 
 @media(max-width: 500px){
   .main--container{
