--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,6 @@
  * 1. Change the default font family in all browsers (opinionated).
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
-@import 'https://fonts.googleapis.com/css?family=Open+Sans';
 html {
   font-family: sans-serif;
   /* 1 */
@@ -371,7 +370,7 @@ textarea {
 
 html, body {
   background-color: #001f3f;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
   text-align: center; }
@@ -381,7 +380,7 @@ select, input, button {
 
 .main--container {
   display: table;
-  margin: 50px auto;
+  margin: 10px auto;
   background-color: #FF851B;
   padding: 10px 20px; }
 
@@ -405,11 +404,18 @@ select, input, button {
   font-size: 20px;
   background-color: #001f3f; }
 
+.div--user {
+  padding-top: 20px; }
+
 .ul--streamers {
   list-style-type: none;
   display: table;
   padding: 0px;
   margin: 30px auto; }
+
+.li--hidden,
+.div--hidden {
+  display: none; }
 
 .li--streamers {
   position: relative;
@@ -420,7 +426,10 @@ select, input, button {
   text-align: left;
   z-index: 5; }
 
-a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:active {
+.a--streamers,
+.a--streamers:hover,
+.a--streamers:focus,
+.a--streamers:active {
   display: inline-block;
   color: #001f3f;
   text-decoration: none;
@@ -430,8 +439,8 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
   border: 2px solid #001f3f;
   padding: 0px 4px; }
 
-.div--user {
-  padding-top: 20px; }
+.fa-angle-down {
+  float: right; }
 
 .stream--info {
   text-align: right;
@@ -440,7 +449,8 @@ a.a--streamers, a.a--streamers:hover, a.a--streamers:focus, a.a--streamers:activ
   margin: -20px 10px 10px 10px; }
 
 .span--info {
-  color: lightgray; }
+  color: lightgray;
+  margin: 20px 0px; }
 
 @media (max-width: 500px) {
   .main--container {
